--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "start": "npx tsc && npx vite-node src/main.ts"
   },
   "devDependencies": {
+    "@types/luxon": "^3.3.0",
     "@types/node": "^20.4.2",
     "prettier": "3.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.0",
     "vite-node": "0.33.0"
+  },
+  "dependencies": {
+    "luxon": "^3.3.0"
   }
 }
