--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/luxon": "^3.3.0",
     "@types/node": "^20.4.2",
+    "@types/pg": "^8.10.2",
     "prettier": "3.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.0",
@@ -16,6 +17,7 @@
   },
   "dependencies": {
     "luxon": "^3.3.0",
+    "pg": "^8.11.1",
     "typescript-json-decoder": "1.0.11"
   }
 }
